fix the last display output in a multi-display system
Was being squished - this resolves the issue

--- a/app/components/main/main.scss
+++ b/app/components/main/main.scss
@@ -379,7 +379,7 @@ article.main {
                 padding-top: $padding;
 
                 &:last-child {
-                    padding-right: $padding;
+                    margin-right: $padding;
                 }
 
                 // A wrapper div
